# TkDNN-ROS2

./: .gitignore  README.md
cpp_pubsub/: CMakeLists.txt  README.md
mmr_base/: CMakeLists.txt  package.xml
mmr_base/msg/: BoundingBox.msg
ros2_ws/log/: latest_build
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
tkdnn_ros2/: CMakeLists.txt  package.xml
tkdnn_ros2/cfg/: yolov4-mmr.cfg
tkdnn_ros2/config/: tkdnn_ros2.yaml
tkdnn_ros2/include/tkdnn_ros2/: camera_detection.hpp
tkdnn_ros2/launch/: tkdnn_ros2_launch.py
tkdnn_ros2/src/: camera_detection.cpp  camera_node.cpp
tkdnn_ros2/tkDNN/: CMakeLists.txt
