<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tkdnn_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tommaso@todo.todo">tommaso</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- <build_depend>mmr_msgs</build_depend>
  <exec_depend>mmr_msgs</exec_depend> -->

  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>

  <buildtool_depend>mmr_base</buildtool_depend>
  <exec_depend>mmr_base</exec_depend>

  <build_depend>OpenCV</build_depend>
  <build_export_depend>OpenCV</build_export_depend>
  <exec_depend>OpenCV</exec_depend>

  <exec_depend>message_runtime</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
